--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,31 @@
+alembic==1.4.0
+aniso8601==8.0.0
 backcall==0.1.0
 Click==7.0
 decorator==4.4.1
 Flask==1.1.1
-Flask-SQLAlchemy==2.4.1
+flask-marshmallow==0.11.0
+Flask-Migrate==2.5.2
+Flask-PyMongo==2.3.0
+Flask-RESTful==0.3.8
 Flask-WTF==0.14.3
-ipython==7.12.0
-ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jedi==0.16.0
 Jinja2==2.11.1
+Mako==1.1.1
 MarkupSafe==1.1.1
+marshmallow==3.4.0
+marshmallow-sqlalchemy==0.22.2
 parso==0.6.1
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.3
 ptyprocess==0.6.0
 Pygments==2.5.2
+pymongo==3.10.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2019.3
 six==1.14.0
 SQLAlchemy==1.3.13
 traitlets==4.3.3
