--- a/graphql/requirements.txt
+++ b/graphql/requirements.txt
@@ -16,11 +16,13 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 mongoengine==0.20.0
+mongomock==3.19.0
 promise==2.3
 pycparser==2.20
 PyJWT==1.7.1
 pymongo==3.10.1
 Rx==1.6.1
+sentinels==1.0.0
 singledispatch==3.4.0.3
 six==1.14.0
 Werkzeug==1.0.1
