updated npm package versions

--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,10 @@
     "eslint-config-react-app": "^5.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.0",
-    "styled-components": "^5.1.0",
-    "typescript": "^3.8.3"
+    "react-scripts": "^3.4.1",
+    "styled-components": "^5.1.1",
+    "testing-library": "0.0.2",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "svgr": "svgr -d src/Icons/ assets/",
@@ -36,6 +37,6 @@
     ]
   },
   "devDependencies": {
-    "@svgr/cli": "^5.2.0"
+    "@svgr/cli": "^5.4.0"
   }
 }
